--- a/423A Group Project Code.qmd
+++ b/423A Group Project Code.qmd
@@ -1014,6 +1014,73 @@ all_data_gentrify_final |>
 
 ```
 
+```{r viz-grad-rate-by-time}
+all_data_gentrify_grad_rate_pivot <- all_data_gentrify_final |> 
+  pivot_longer(cols = contains("graduation"), 
+               names_to = 'grad_rate_timeframe', 
+               values_to = 'grad_rate') |> 
+  mutate(grad_rate_timeframe = str_replace_all(grad_rate_timeframe, 
+                                               "graduation_rate_4_year", 
+                                               "4 Year Graduation Rate"),
+         grad_rate_timeframe = str_replace_all(grad_rate_timeframe,
+                                               "graduation_rate_5_year", 
+                                               "5 Year Graduation Rate"),
+         grad_rate_timeframe = str_replace_all(grad_rate_timeframe,
+                                               "graduation_rate_6_year", 
+                                               "6 Year Graduation Rate")) 
+all_data_gentrify_grad_rate_pivot |> 
+  ggplot() +
+  geom_line(aes(x = year, 
+                y = grad_rate), 
+            color = 'lightgreen', 
+            linewidth = 2) +
+  geom_point(data = filter(all_data_gentrify_grad_rate_pivot, as.character(gentrifying) == "TRUE"),
+             aes(x = year, 
+                 y = grad_rate), 
+             color = 'darkgreen',
+             size = 3.5) +
+  facet_grid(~grad_rate_timeframe) +
+  labs(title = "Gentrification's Relationship to Graduation Rate", 
+       #subtitle = 'Students Take Longer to Graduate in Gentriying Years', 
+       x = 'Year', 
+       y = 'Graduation Rate') 
+```
+
+```{r viz-drop-rate-by-time}
+all_data_gentrify_drop_rate_pivot <- all_data_gentrify_final |> 
+  pivot_longer(cols = contains("dropout"), 
+               names_to = 'dropout_rate_timeframe', 
+               values_to = 'dropout_rate') |> 
+  mutate(dropout_rate_timeframe = str_replace_all(dropout_rate_timeframe, 
+                                               "dropout_rate_4_year", 
+                                               "4 Year Droupout Rate"),
+         dropout_rate_timeframe = str_replace_all(dropout_rate_timeframe,
+                                               "dropout_rate_5_year", 
+                                               "5 Year Droupout Rate"),
+         dropout_rate_timeframe = str_replace_all(dropout_rate_timeframe,
+                                               "dropout_rate_6_year", 
+                                               "6 Year Droupout Rate")) 
+
+rm(all_data_gentrify_drop_rate_pivot)
+all_data_gentrify_drop_rate_pivot |> 
+  ggplot() +
+  geom_line(aes(x = year, 
+                y = dropout_rate), 
+            color = 'lightgreen', 
+            linewidth = 2) +
+  geom_point(data = filter(all_data_gentrify_drop_rate_pivot, as.character(gentrifying) == "TRUE"),
+             aes(x = year, 
+                 y = dropout_rate), 
+             color = 'darkgreen',
+             size = 3.5) +
+  facet_grid(~dropout_rate_timeframe) +
+  labs(title = "Gentrification's Relationship to Dropout Rate", 
+       #subtitle = 'Students Take Longer to Graduate in Gentriying Years', 
+       x = 'Year', 
+       y = 'Dropout Rate') 
+
+```
+
 ```{r viz-dropoutrate}
 all_data_gentrify_final |> 
   pivot_longer(cols = contains("dropout"), 
